perf(smart-auth): AK/SK验证功能优化